Fix overflow on pick team

--- a/src/OpenFPL_frontend/assets/css/common.scss
+++ b/src/OpenFPL_frontend/assets/css/common.scss
@@ -417,7 +417,7 @@
         padding-right: 64px;
     }
     .stat{
-        font-size: 48px;
+        font-size: 40px;
     }
     .stat-header{
         font-size: 16px;
