--- a/src/OpenFPL_frontend/assets/css/pick-team.scss
+++ b/src/OpenFPL_frontend/assets/css/pick-team.scss
@@ -716,9 +716,14 @@
     }  
 
     .shirt{
-      width: 60.69px;
-      height: 80px;
+      width: 86px;
+      height: 88px;
     }  
+    
+.shirt-icon{
+  width: 86px;
+  height: 88px;
+}
 
     
 .player-name-row {
